--- a/apps/docs/pages/index.mdx
+++ b/apps/docs/pages/index.mdx
@@ -1,11 +1,22 @@
-# Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+---
+title: Getting Started
+---
 
-## What is Nextra?
+# Hello 👋
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+In this comprehensive documentation, you'll find everything you need to know about working with the monorepo, from setting up your development environment to deploying your applications. Whether you're interested in exploring the projects, contributing to our codebase, or simply seeking guidance on best practices, we've got you covered.
 
-## Documentation
+## Getting Started
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+If you're new to our monorepo, we recommend starting with our "Monorepo" guide. This will walk you through the process of cloning the repository, installing dependencies, and getting your environment set up for development. Whether you prefer to work with JavaScript, Python, or another language, we have resources tailored to your needs.
+
+## Explore Our Projects
+
+Our monorepo houses a diverse range of projects, spanning web applications, mobile application, libraries, and more.
+Take some time to explore our projects and discover the innovative solutions we're building. Whether you're interested in web development, machine learning, or infrastructure automation, you'll find something here to pique your interest.
+
+## Need Help?
+
+If you have any questions, encounter issues, or just want to say hello, don't hesitate to reach out. You can find answers to common questions in our FAQ section, or join the conversation in our community forums.
+
+Thank you for choosing Fake Store. We're excited to have you on board, and we can't wait to see what amazing things we'll build together!
