--- a/apps/docs/pages/installation.mdx
+++ b/apps/docs/pages/installation.mdx
@@ -15,7 +15,7 @@ Before getting started, ensure you have the following installed on your system:
 1. Clone this repository to your local machine:
 
 ```bash
-pnpm install -g turbo #or pnpm install -g turbo
+pnpm install -g turbo
 git clone https://github.com/dzc0d3r/weasydoo-task
 cd weasydoo-task
 ```
@@ -25,14 +25,6 @@ cd weasydoo-task
 ```bash
 pnpm install
 ```
-
-## Visit the documentation website
-
-```bash
-pnpm docs:dev
-```
-
----
 
 ## Running Projects
 
