fix(apps/docs): fix a typo

--- a/apps/docs/pages/tech-stack.mdx
+++ b/apps/docs/pages/tech-stack.mdx
@@ -49,7 +49,7 @@ Tailwind CSS is a utility-first CSS framework that allows us to quickly build cu
 
 ## Shared UI Library
 
-In our repository, we have a shared UI library (uses shadcn under the hood which laverag radix), this shared library contains reusable components and styles shared across multiple projects. We chose to create a shared UI library for the following reasons:
+In our repository, we have a shared UI library (uses shadcn/ui under the hood which laverag radix), this shared library contains reusable components and styles shared across multiple projects. We chose to create a shared UI library for the following reasons:
 
 - **Consistency**: A shared UI library ensures consistency in design and user experience across all projects, reducing design inconsistencies and improving overall brand identity.
 - **Code Reusability**: By centralizing UI components and styles in a shared library, we can reuse code across multiple projects, saving development time and effort.
